--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,26 +2,27 @@ name: Weekly NVDA Report Bot
 
 on:
   schedule:
-    # 每周一上午 8:00 (北京时间)，对应 UTC 时间 0:00
-    - cron: '0 0 * * 1'
-  workflow_dispatch: # 允许你手动点击按钮测试
+    - cron: '0 0 * * 1' # 每周一北京时间上午8点运行
+  workflow_dispatch: # 允许手动点击按钮测试
 
 jobs:
   run-report:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.11' # 升级到 3.11 避免 FutureWarning
 
       - name: Install Dependencies
-        run: pip install google-genai
+        run: |
+          pip install google-genai yfinance
 
       - name: Run Analysis
+        # 核心：必须在这里把 Secret 映射给环境变量
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
